AAE-51056 Subscriber registry, consumer side, and wire contracts